--- a/css/normalize.css
+++ b/css/normalize.css
@@ -1,12 +1,4 @@
-/* ==========================================================================
-   Normalize.css is a customisable CSS file that makes browsers render all 
-   elements more consistently and in line with modern standards.
-   We researched the differences between default browser styles in order to 
-   precisely target only the styles that need normalizing.
-   
-   Normalize.css is a project by Nicolas Gallagher and Jonathan Neal.
-	normalize.css v2.1.0 | MIT License | git.io/normalize
-   ========================================================================== */
+/*! normalize.css v2.1.1 | MIT License | git.io/normalize */
 
 /* ==========================================================================
    HTML5 display definitions
@@ -21,7 +13,7 @@ audio:not([controls]) { display: none; height: 0; }
    Base
    ========================================================================== */
 
-html { font-family: sans-serif; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
+html { font-family: sans-serif; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; }
 body { margin: 0; }
 
 /* ==========================================================================
