--- a/style.css
+++ b/style.css
@@ -766,7 +766,7 @@ select {
 
 .social-media-icons li {
 	display: inline-block;
-	margin: 0.1em 0 0 0.2em;
+	margin: 0.1em 0 0 0.6em;
 }
 
 .social-media-icons a {
@@ -843,7 +843,16 @@ article.sticky {
 	margin-bottom: 0.625rem;
 	padding: 5px 0;
 	padding: 0.3125rem 0;
+	*zoom: 1;
 }
+
+.header-meta:before,
+.header-meta:after {
+	content: "";
+	display: table;
+}
+
+.header-meta:after { clear: both; }
 
 .header-meta a {
 	text-decoration:none;
@@ -860,7 +869,16 @@ article.sticky {
 .entry-content {
 	margin-bottom: 20px;
 	margin-bottom: 1.25rem;
+	*zoom: 1;
 }
+
+.entry-content:before,
+.entry-content:after {
+	content: "";
+	display: table;
+}
+
+.entry-content:after { clear: both; }
 
 .post-categories a,
 .post-tags a {
@@ -1044,7 +1062,16 @@ article.sticky {
 	padding: 24px 0;
 	padding: 1.5rem 0;
 	overflow: hidden;
+	*zoom: 1;
 }
+
+.author-info:before,
+.author-info:after {
+	content: "";
+	display: table;
+}
+
+.author-info:after { clear: both; }
 
 .author-description h2 {
 	font-size: 24px;
@@ -1091,6 +1118,10 @@ article.sticky {
 	margin-top: 0;
 }
 
+.author.archive .author-link {
+	display: none;
+}
+
 .author-avatar {
 	float: left;
 	margin-top: 8px;
@@ -1113,6 +1144,19 @@ article.sticky {
    Post Formats
    ========================================================================== */
 
+.entry-media {
+	margin: 0 auto 16px;
+	margin: 0 auto 1rem;
+	max-width: 792px;
+	width: 100%;
+}
+
+.entry-media .wp-caption,
+.entry-media .wp-caption-text,
+.entry-media [class*="align"] {
+	margin: 0 auto;
+}
+
 /* Aside */
 .format-aside .entry-content {
 	margin: 20px 0 18px 0;
@@ -1125,11 +1169,17 @@ article.sticky {
 
 /* Status */
 .format-status .entry-content {
-	border-left: 5px solid #333;
+	border-left: 5px solid #ddd;
 	margin: 20px 0 18px 0;
 	margin: 1.25rem 0 1.125rem 0;
 	padding: 0 0 0 15px;
 	padding: 0 0 0 0.9375rem;
+}
+
+.format-status .entry-content p {
+	font-size: 20px;
+	font-size: 1.25rem;
+	font-style: italic;
 }
 
 .format-status .entry-content p:last-child {
@@ -1143,8 +1193,8 @@ article.sticky {
 	font-style: normal;
 	speak: none;
 	vertical-align: top;
-	font-size: 32px;
-	font-size: 2rem;
+	font-size: 40px;
+	font-size: 2.5rem;
 	content: "\f10d";
 	color: #ddd;
 	top: -15px;
@@ -1154,29 +1204,21 @@ article.sticky {
 }
 
 .format-quote .entry-content {
-	margin-top: 40px;
-	margin-top: 2.5rem;
+	margin-top: 24px;
+	margin-top: 1.5rem;
 	position: relative;
 }
 
 .format-quote .entry-content blockquote {
 	border: none;
+	margin-left: 40px;
+	margin-left: 2..5rem;
 }
 
 /* Audio */
-.audiojs .play-pause {
-	width: 38px;
-}
-
-.audiojs .time {
-	padding-left: 22px;
-	padding-left: 1.375rem;
-}
-
-.audiojs .time em {
-	font-family: 'PT Sans', Helvetica, Arial, sans-serif;
-	font-style: normal;
-	font-weight: 400;
+.format-audio .wp-audio-shortcode {
+	margin-bottom: 16px;
+	margin-bottom: 1rem;
 }
 
 
@@ -1367,7 +1409,6 @@ a.comment-reply-link:hover {
 	margin-bottom: 1.5rem;
 }
 
-.entry-content label,
 #respond form label {
 	display: block;
 	line-height: 1.8;
@@ -1982,6 +2023,13 @@ li span.dots {
 	}
 	.social-media-icons {
 		text-align: center;
+	}
+}
+
+@media only screen and (max-width: 320px) {
+	.author-description {
+		float: left;
+		width: 100%;
 	}
 }
 
