--- a/css/normalize.css
+++ b/css/normalize.css
@@ -1,4 +1,4 @@
-/*! normalize.css v2.1.1 | MIT License | git.io/normalize */
+/*! normalize.css v2.1.2 | MIT License | git.io/normalize */
 
 /* ==========================================================================
    HTML5 display definitions
@@ -7,7 +7,7 @@
 article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary { display: block; }
 audio, canvas, video { display: inline-block; }
 audio:not([controls]) { display: none; height: 0; }
-[hidden] { display: none; }
+[hidden], template { display: none; }
 
 /* ==========================================================================
    Base
@@ -20,6 +20,7 @@ body { margin: 0; }
    Links
    ========================================================================== */
 
+a { background: transparent; }
 a:focus { outline: thin dotted; }
 a:active, a:hover { outline: 0; }
 
