Set main nav colour for .current_page_parent

--- a/style.css
+++ b/style.css
@@ -1876,7 +1876,8 @@ li span.dots {
 .main-navigation .current-menu-item > a,
 .main-navigation .current-menu-ancestor > a,
 .main-navigation .current_page_item > a,
-.main-navigation .current_page_ancestor > a {
+.main-navigation .current_page_ancestor > a,
+.main-navigation .current_page_parent > a {
 	color: #2997ab; /* Nav bar link color for current menu item or ancestor */
 }
 
