--- a/style.css
+++ b/style.css
@@ -611,6 +611,50 @@ select {
 	max-width: 100%;
 }
 
+/* HTML5 galleries */
+.gallery .gallery-item {
+	float: left;
+	margin: 10px 1% 0;
+	text-align: center;
+}
+
+.gallery-columns-1 .gallery-item {
+	width: 100%;
+	margin: 10px 0 0;
+}
+
+.gallery-columns-2 .gallery-item {
+	width: 47.5%
+}
+
+.gallery-columns-3 .gallery-item {
+	width: 31%
+}
+
+.gallery-columns-4 .gallery-item {
+	width: 22.5%
+}
+
+.gallery-columns-5 .gallery-item {
+	width: 17.75%
+}
+
+.gallery-columns-6 .gallery-item {
+	width: 14%
+}
+
+.gallery-columns-7 .gallery-item {
+	width: 12%
+}
+
+.gallery-columns-8 .gallery-item {
+	width: 10.25%
+}
+
+.gallery-columns-9 .gallery-item {
+	width: 9%
+}
+
 /* Small headers */
 .archive-title,
 .page-title,
