Add new Blank Page Builder Template

--- a/style.css
+++ b/style.css
@@ -2198,19 +2198,23 @@ h1.page-title {
    ========================================================================== */
 
 /* Divi Builder - Resize rows to match Quark */
-.page-template-page-builders.et_divi_builder #et_builder_outer_content .et_pb_section .et_pb_row {
+.page-template-page-builderfullwidth.et_divi_builder #et_builder_outer_content .et_pb_section .et_pb_row,
+.page-template-page-builderblank.et_divi_builder #et_builder_outer_content .et_pb_section .et_pb_row,
+.page-template-page-builderboxed.et_divi_builder #et_builder_outer_content .et_pb_section .et_pb_row {
 	max-width: 1200px;
 	width: 90%;
 }
 
 /* Visual Composer - Remove the negative margin when using the full-width page builder template */
-.page-template-page-builders.wpb-js-composer .vc_row {
+.page-template-page-builderfullwidth.wpb-js-composer .vc_row,
+.page-template-page-builderblank.wpb-js-composer .vc_row {
 	margin-left: 0;
 	margin-right: 0;
 }
 
 /* SiteOrigin Page Builder - Ensure the grid only extends 100% */
-.page-template-page-builders.siteorigin-panels .panel-grid {
+.page-template-page-builderfullwidth.siteorigin-panels .panel-grid,
+.page-template-page-builderblank.siteorigin-panels .panel-grid {
 	margin-left: 0 !important;
 	margin-right: 0 !important;
 }
