--- a/style.css
+++ b/style.css
@@ -190,6 +190,11 @@ dt {
 	font-weight: 700;
 }
 
+figure {
+	margin: 1rem 0;
+	margin: 16px 0;
+}
+
 b, strong {
 	font-family: 'PT Sans', Helvetica, Arial, sans-serif;
 	font-style: normal;
@@ -330,6 +335,9 @@ code, pre {
 	font-size: 0.75rem;
 	padding: 0 3px 2px;
 	padding: 0 0.1875rem 0.125rem;
+	overflow: auto;
+	white-space: pre-wrap;
+	word-wrap: break-word;
 }
 
 code {
@@ -337,6 +345,14 @@ code {
 	border: 1px solid #e1e1e8;
 	padding: 2px 4px;
 	padding: 0.125rem 0.25rem;
+}
+
+pre {
+	background-color: #fafafa;
+	border-color: #ddd;
+	border-style: solid;
+	border-width: 1px 1px 1px 11px;
+	margin: 1.7rem 0 1.7rem 0.3rem;
 }
 
 abbr,
@@ -1647,7 +1663,7 @@ form label.error {
 
 .widget_rss li {
 	margin: 12px 0;
-	margin: 0.75rem;
+	margin: 0.75rem 0;
 }
 
 .widget_recent_entries .post-date,
@@ -1855,7 +1871,7 @@ li span.dots {
 	margin: 0;
 }
 
-.main-navigation li.menu-parent-item > a:after { /* If you don't want the arrows on the top level drop down, simply remove this style */
+.main-navigation li.menu-item-has-children > a:after { /* If you don't want the arrows on the top level drop down, simply remove this style */
 	font-family: 'FontAwesome';
 	font-weight: normal;
 	font-style: normal;
@@ -1866,7 +1882,7 @@ li span.dots {
 	content: " \f078";
 }
 
-.main-navigation ul li li.menu-parent-item > a:after { /* If you don't want the arrows on the sub-menu options, simply remove this style */
+.main-navigation ul li li.menu-item-has-children > a:after { /* If you don't want the arrows on the sub-menu options, simply remove this style */
 	font-family: 'FontAwesome';
 	font-weight: normal;
 	font-style: normal;
