--- a/style.css
+++ b/style.css
@@ -1555,6 +1555,16 @@ form label.error {
 	line-height: 1.3;
 }
 
+#respond #wp-comment-cookies-consent {
+	margin-right: 12px;
+	margin-right: .75rem;
+	margin-top: -3px;
+}
+
+#respond .comment-form-cookies-consent label {
+	display: inline;
+}
+
 /* ==========================================================================
    Footer
    ========================================================================== */
