--- a/style.css
+++ b/style.css
@@ -436,6 +436,9 @@ img.wp-smiley, .rsswidget img {
 	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
 	clip: rect(1px, 1px, 1px, 1px);
 	position: absolute !important;
+	height: 1px;
+	width: 1px;
+	overflow: hidden;
 }
 
 .menu-toggle, button, input {
